old_tests/fail/invalid_char_iteral/main.sk
module Main where

main = 'aa'